--- a/trackviz1/app/assets/stylesheets/athletes.css.scss
+++ b/trackviz1/app/assets/stylesheets/athletes.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the athletes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+.point {
+	fill: steelblue;
+}
